            - Constructors now check some preconditions and throw exceptions if
              they fail (these checks were previously done during homology()).
        Class GroupExpression:
            - Added move constructors and move assignment operators.
            - Added a constructor that takes a single term, or a single
              generator/exponent pair.
            - New variant of substitute() that can replace all generators
              simultaneously.
            - Functions inverse() and power() now return by value, not pointer.
            - Functions addTermsFirst() and addTermsLast() now take the
              GroupExpression argument by value, not by const reference.
            - Added member and global swap() functions.
        Class GroupPresentation:
            - New routines enumerateCovers(), incidence() and gap().
            - Added move constructors and move assignment operators.
            - New constructor to create free groups.
            - Functions abelianisation() and markedAbelianisation() now
              return groups by value (which can then be moved from).
            - New routine abelianRank().
            - New routine relations().
            - Function addRelation() now takes its argument by value.
            - Added member and global swap() functions.
            - Functions intelligentSimplify(), smallCancellation(),
              intelligentNielsen(), homologicalAlignment() and prettyRewriting()
              now return a std::optional<HomGroupPresentation>, not a bool
              (but this can be cast to a bool to give the previous behaviour).
              The corresponding ...Detail() functions are now deprecated
              aliases, and return this same std::optional<HomGroupPresentation>
              instead of a std::unique_ptr<HomGroupPresentation>.  The C++
              syntax should be largely unaffected, and the Python behaviour